chage hover icon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Tops Navigation Bar</title>
+      <title>citijan-seva</title>
       <link rel="stylesheet" href="Style.css">
       <script src="script.js"></script>
       <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet' />
@@ -47,7 +47,7 @@
                <a href="#"><img src="/svg/frame-1618873794.svg" alt="People"></a>
                <img src="/svg/Line 4.svg" alt="line"  class="line">
                <div class="dropdown">
-                  <a href="#">
+                  <!-- <a href="#"> -->
                      <img src="/svg/frame-1618873795.svg" alt="Accessibility">
                      <div class="dropdown-content">
                   <a href="#">A+</a>
@@ -56,7 +56,7 @@
                   <a href="#">A</a>
                   </div>
                </div>
-               </a>
+               <!-- </a> -->
                <img src="/svg/Line 4.svg" alt="line"  class="line">
                <a href="#"><img src="/svg/frame-1618873796.svg" alt="Chat"></a>
             </div>
@@ -127,6 +127,9 @@
                   <div class="icon">
                      <div class="icon_background">
                         <img src="/svg/frame-1618873765.svg" alt="Unified Access">
+                     </div>
+                     <div class="icon_background"></div>
+                        <img src="" alt="Unified Access">
                      </div>
                   </div>
                   <h3>Streamlined Processes</h3>
