--- a/index.html
+++ b/index.html
@@ -116,48 +116,35 @@
             <div class="benefits-grid">
                <div class="benefit-item">
                   <div class="icon">
-                     <div class="icon_background">
-                        <img src="/svg/fi-9333996.svg" alt="Unified Access">
-                     </div>
+                     <img src="/svg/component-38.svg">
                   </div>
                   <h3 class="head-1">Unified Access</h3>
                   <p>Provides a single, integrated platform for accessing a wide range of municipal services, making it easier for citizens to interact with their local goverment.</p>
                </div>
                <div class="benefit-item">
                   <div class="icon">
-                     <div class="icon_background">
-                        <img src="/svg/frame-1618873765.svg" alt="Unified Access">
-                     </div>
-                     <div class="icon_background"></div>
-                        <img src="" alt="Unified Access">
-                     </div>
+                     <img src="/svg/component-39.svg" alt="img">
                   </div>
                   <h3>Streamlined Processes</h3>
                   <p>Simplifies administrative procedures by centralizing various services like NOCs, licenses, and permissions, reducing the time and effort required for approvals.</p>
                </div>
                <div class="benefit-item">
                   <div class="icon">
-                     <div class="icon_background">
-                        <img src="/svg/fi-4818493.svg" alt="Unified Access" class="icon-2">
-                     </div>
+                     <img src="/svg/component-40.svg">
                   </div>
                   <h3>Enhanced Transparency</h3>
                   <p>Facilitates greater transparency and accountability by offering real-time tracking of services requests, applications, and approvals.</p>
                </div>
                <div class="benefit-item">
                   <div class="icon">
-                     <div class="icon_background">
-                        <img src="/svg/fi-14784684.svg" alt="Unified Access">
-                     </div>
+                     <img src="/svg/component-41.svg" alt="img">
                   </div>
                   <h3>Improved Efficiency</h3>
                   <p>Reduces duplication of effort across different municipalities by standardizing processes and data management, leading to more efficient service delivery.</p>
                </div>
                <div class="benefit-item">
                   <div class="icon">
-                     <div class="icon_background">
-                        <img src="/svg/fi-8142247.svg" alt="Unified Access">
-                     </div>
+                     <img src="/svg/component-42.svg" alt="img">
                   </div>
                   <h3>Citizen Empowerment</h3>
                   <p>Empowers citizens by providing 24/7 access to services and information, allowing them to engage with municipal services at their convenience.</p>
@@ -202,7 +189,7 @@
          <div class="card">
             <div>
                <h2>Free Calculator</h2>
-               <p>Quickly estimate your fees for municipal services using our online free calculator. Enter the relevant information to receive accurate fee calculations in seconds, making your transactions more transparent and hassle-free.</p>
+               <p>Quickly estimate your fees for municipal services using our online free calculator.making your transactions more transparent and hassle-free.</p>
             </div>
             <div class="icon">
                <img src="/png/image-4-1.png">
