--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
          </div>
          <div class="nav-right">
             <a href="#main-content" class="skip">SKIP TO MAIN CONTENT</a>
-            <img src="/svg/Line 4.svg" alt="line" class="line1">
+            <img src="Line 4.svg" alt="line" class="line1">
             <div class="dropdown">
-               <button class="dropbtn">English <img src="/svg/frame-40463.svg" alt=""></button>
-               <img src="/svg/Line 4.svg" alt="line" class="line2">
+               <button class="dropbtn">English <img src="frame-40463.svg" alt=""></button>
+               <img src="Line 4.svg" alt="line" class="line2">
                <div class="dropdown-content">
                   <a href="#">हिन्दी</a>
                </div>
             </div>
             <div class="icons">
                <div class="dropdown">
-                  <a href="#"><img src="/svg/frame-1618873793.svg" alt="Audio" class="img-audio"></a>
+                  <a href="#"><img src="frame-1618873793.svg" alt="Audio" class="img-audio"></a>
                   <div class="dropdown-content">
                      <a href="#">
                         <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24" height="24" viewBox="0 0 48 48">
@@ -43,12 +43,12 @@
                      </a>
                   </div>
                </div>
-               <img src="/svg/Line 4.svg" alt="line"  class="line">
-               <a href="#"><img src="/svg/frame-1618873794.svg" alt="People"></a>
-               <img src="/svg/Line 4.svg" alt="line"  class="line">
+               <img src="Line 4.svg" alt="line"  class="line">
+               <a href="#"><img src="frame-1618873794.svg" alt="People"></a>
+               <img src="Line 4.svg" alt="line"  class="line">
                <div class="dropdown">
                   <!-- <a href="#"> -->
-                     <img src="/svg/frame-1618873795.svg" alt="Accessibility">
+                     <img src="frame-1618873795.svg" alt="Accessibility">
                      <div class="dropdown-content">
                   <a href="#">A+</a>
                   <a href="#">A</a>
@@ -57,8 +57,8 @@
                   </div>
                </div>
                <!-- </a> -->
-               <img src="/svg/Line 4.svg" alt="line"  class="line">
-               <a href="#"><img src="/svg/frame-1618873796.svg" alt="Chat"></a>
+               <img src="Line 4.svg" alt="line"  class="line">
+               <a href="#"><img src="frame-1618873796.svg" alt="Chat"></a>
             </div>
          </div>
       </div>
@@ -66,12 +66,12 @@
       <header>
          <nav>
             <div class="logo">
-               <img src="/png/frame-1618873762.png" alt="Citiजन Seva">
+               <img src="frame-1618873762.png" alt="Citiजन Seva">
             </div>
             <ul class="nav-links">
                <li><a href="#">Home</a></li>
                <li class="dropbtn-1">
-                  <a href="#">About Us <img style="margin-left: 10px;" src="/svg/White Down Arrow.svg" alt=""></a>
+                  <a href="#">About Us <img style="margin-left: 10px;" src="White Down Arrow.svg" alt=""></a>
                   <div class="dropdown-content-1">
                      <a href="#">Introduction</a>
                      <a href="#">Organization Chart</a>
@@ -79,7 +79,7 @@
                </li>
                <li><a href="#">Notification</a></li>
                <li class="dropbtn-1">
-                  <a href="#">Reports<img style="margin-left: 10px;" src="/svg/White Down Arrow.svg" alt=""></a>
+                  <a href="#">Reports<img style="margin-left: 10px;" src="White Down Arrow.svg" alt=""></a>
                   <div class="dropdown-content-1">
                      <a href="#">Report 1</a>
                      <a href="#">Report 2</a>
@@ -93,7 +93,7 @@
                   </div>
                </li>
                <li class="dropbtn-1">
-                  <a href="#" class="login-btn">Login<img style="margin-left: 10px;" src="/svg/White Down Arrow.svg" alt=""></a>
+                  <a href="#" class="login-btn">Login<img style="margin-left: 10px;" src="White Down Arrow.svg" alt=""></a>
                   <div class="dropdown-content-1">
                      <a href="#">Citizen</a>
                      <a href="#">Official</a>
@@ -101,7 +101,7 @@
                </li>
             </ul>
             <div>
-               <img src="/svg/Frame 1618873784.png" alt="Citiजन Seva" class="right-logo">
+               <img src="Frame 1618873784.png" alt="Citiजन Seva" class="right-logo">
             </div>
          </nav>
          <div class="main-content">
@@ -116,35 +116,35 @@
             <div class="benefits-grid">
                <div class="benefit-item">
                   <div class="icon">
-                     <img src="/svg/component-38.svg">
+                     <img src="component-38.svg">
                   </div>
                   <h3 class="head-1">Unified Access</h3>
                   <p>Provides a single, integrated platform for accessing a wide range of municipal services, making it easier for citizens to interact with their local goverment.</p>
                </div>
                <div class="benefit-item">
                   <div class="icon">
-                     <img src="/svg/component-39.svg" alt="img">
+                     <img src="component-39.svg" alt="img">
                   </div>
                   <h3>Streamlined Processes</h3>
                   <p>Simplifies administrative procedures by centralizing various services like NOCs, licenses, and permissions, reducing the time and effort required for approvals.</p>
                </div>
                <div class="benefit-item">
                   <div class="icon">
-                     <img src="/svg/component-40.svg">
+                     <img src="component-40.svg">
                   </div>
                   <h3>Enhanced Transparency</h3>
                   <p>Facilitates greater transparency and accountability by offering real-time tracking of services requests, applications, and approvals.</p>
                </div>
                <div class="benefit-item">
                   <div class="icon">
-                     <img src="/svg/component-41.svg" alt="img">
+                     <img src="component-41.svg" alt="img">
                   </div>
                   <h3>Improved Efficiency</h3>
                   <p>Reduces duplication of effort across different municipalities by standardizing processes and data management, leading to more efficient service delivery.</p>
                </div>
                <div class="benefit-item">
                   <div class="icon">
-                     <img src="/svg/component-42.svg" alt="img">
+                     <img src="component-42.svg" alt="img">
                   </div>
                   <h3>Citizen Empowerment</h3>
                   <p>Empowers citizens by providing 24/7 access to services and information, allowing them to engage with municipal services at their convenience.</p>
@@ -163,7 +163,7 @@
                <p>Explore a wide range of services designed to meet the needs of our community, from property tax payments to waste management and more.</p>
             </div>
             <div class="icon">
-               <img src="/png/frame.png">
+               <img src="frame.png">
             </div>
          </div>
          <div class="card">
@@ -172,7 +172,7 @@
                <p>Find essential services and resources tailored to support the growth and operation of businesses within our municipality.</p>
             </div>
             <div class="icon">
-               <img src="/png/image-1-1.png">
+               <img src="image-1-1.png">
             </div>
          </div>
          <div class="card">
@@ -183,7 +183,7 @@
                </p>
             </div>
             <div class="icon">
-               <img src="/png/image-3-1.png">
+               <img src="image-3-1.png">
             </div>
          </div>
          <div class="card">
@@ -192,7 +192,7 @@
                <p>Quickly estimate your fees for municipal services using our online free calculator.making your transactions more transparent and hassle-free.</p>
             </div>
             <div class="icon">
-               <img src="/png/image-4-1.png">
+               <img src="image-4-1.png">
             </div>
          </div>
          <div class="card">
@@ -201,7 +201,7 @@
                <p>Reserve public spaces, community halls, and other municipal facilities easily through our online booking system.</p>
             </div>
             <div class="icon">
-               <img src="/png/image-5-1.png">
+               <img src="image-5-1.png">
             </div>
          </div>
          <div class="card">
@@ -212,7 +212,7 @@
                </p>
             </div>
             <div class="icon">
-               <img src="/png/image-6-1.png">
+               <img src="image-6-1.png">
             </div>
          </div>
       </section>
@@ -225,65 +225,65 @@
          <div class="right">
             <ul>
                <li>
-                  <img src="/svg/frame-2610707.svg" alt="img" class="process-img">
+                  <img src="frame-2610707.svg" alt="img" class="process-img">
                   <p class="step-text">Registration Via SSO</p>
                   <span class="step-number">01</span>
                </li>
                <li>
-                  <img src="/svg/frame-2610708.svg" alt="img" class="process-img">
+                  <img src="frame-2610708.svg" alt="img" class="process-img">
                   <p class="step-text">Apply for Service</p>
                   <span class="step-number">02</span>
                </li>
                <li>
-                  <img src="/svg/frame-2610709.svg" alt="img" class="process-img">
+                  <img src="frame-2610709.svg" alt="img" class="process-img">
                   <p class="step-text">Upload Mandatory Documents</p>
                   <span class="step-number">03</span>
                </li>
                <li>
-                  <img src="/svg/frame-26107010.svg" alt="img" class="process-img">
+                  <img src="frame-26107010.svg" alt="img" class="process-img">
                   <p class="step-text">Payment</p>
                   <span class="step-number">04</span>
                </li>
                <li>
-                  <img src="/svg/frame-2610711.svg" alt="img" class="process-img">
+                  <img src="frame-2610711.svg" alt="img" class="process-img">
                   <p class="step-text">Online Application Tracking</p>
                   <span class="step-number">05</span>
                </li>
                <li>
-                  <img src="/svg/frame-26107012.svg" alt="img" class="process-img">
+                  <img src="frame-26107012.svg" alt="img" class="process-img">
                   <p class="step-text">Download e-signed <br> certificate/ license</p>
                   <span class="step-number">06</span>
                </li>
             </ul>
             <div class="paly-btn">
-               <img src="/svg/frame-1618873774.svg" alt="paly">
+               <img src="frame-1618873774.svg" alt="paly">
             </div>
             <div class="Arrow">
-               <img src="/png/White Arrow.png" alt="arrow" >
+               <img src="White Arrow.png" alt="arrow" >
             </div>
             <div class="yellow-Arrow">
-               <img src="/png/Orange Arrow.png" alt="arrow" id="element1">
+               <img src="Orange Arrow.png" alt="arrow" id="element1">
             </div>
          </div>
       </section>
       <section class="section-6">
          <div class="img-container">
-            <img src="/png/image-824.png" alt="#img">
-            <img src="/png/image-825.png" alt="#img">
-            <img src="/png/pngegg-1.png" alt="#img">
-            <img src="/png/frame-1618873786.png" alt="#img">
-            <img src="/png/image-827.png" alt="#img">
-            <img src="/png/GOV.png" alt="#img">
-            <img src="/png/image-828.png" alt="#img">
-            <img src="/png/image-829.png" alt="#img">
+            <img src="image-824.png" alt="#img">
+            <img src="image-825.png" alt="#img">
+            <img src="pngegg-1.png" alt="#img">
+            <img src="frame-1618873786.png" alt="#img">
+            <img src="image-827.png" alt="#img">
+            <img src="GOV.png" alt="#img">
+            <img src="image-828.png" alt="#img">
+            <img src="image-829.png" alt="#img">
          </div>
       </section>
       <section class="section-7">
          <div class="img-container-1">
-            <img src="/png/frame-1618873808_2024-09-26/frame-1618873808.png" alt="#img">
+            <img src="frame-1618873808_2024-09-26/frame-1618873808.png" alt="#img">
          </div>
          <div class="img-container-2">
-            <img src="/png/frame-1618873809_2024-09-26/frame-1618873809.png" alt="#img">
+            <img src="frame-1618873809_2024-09-26/frame-1618873809.png" alt="#img">
          </div>
       </section>
       <section class="footer">
