--- a/index.html
+++ b/index.html
@@ -280,10 +280,10 @@
       </section>
       <section class="section-7">
          <div class="img-container-1">
-            <img src="frame-1618873808_2024-09-26/frame-1618873808.png" alt="#img">
+            <img src="frame-1618873808.png" alt="#img">
          </div>
          <div class="img-container-2">
-            <img src="frame-1618873809_2024-09-26/frame-1618873809.png" alt="#img">
+            <img src="frame-1618873809.png" alt="#img">
          </div>
       </section>
       <section class="footer">
